--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -244,6 +244,10 @@ Muotokuvatilassa"</string>
   <string name="portait_effect_entry_riddle">Arvoitus</string>
   <string name="portait_effect_entry_romance">Romanttinen</string>
   <string name="portait_effect_entry_story">Tarina</string>
+  <string name="portrait_bokeh_first_tips">"Käytä Muotokuvatilaa sumentaaksesi
+kuvasi taustan"</string>
+  <string name="portrait_bokeh_text">Muotokuvatila</string>
+  <string name="portrait_bokeh_tips">Aseta kohde 1,5 metrin etäisyydelle</string>
   <string name="portrait_mode_depth_effect_success_hint">Syvyystehosteet</string>
   <string name="portrait_mode_lowlight_hint">Nyt on liian pimeää</string>
   <string name="portrait_mode_too_close_hint">Siirry kauemmaksi kohteesta</string>
