--- a/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCompass.apk/res/values-fi-rFI/strings.xml
@@ -7,7 +7,7 @@
   <string name="altitude_uncalibrate_cancel">Peruuta</string>
   <string name="altitude_uncalibrate_msg">Korkeutta ei voi kalibroida tarkasti ilman GPS tai mobiilidatayhteyttä.</string>
   <string name="altitude_uncalibrate_refresh">Yritä uudelleen</string>
-  <string name="altitude_uncalibrate_tip">Korkeutta ei voi kalibroida</string>
+  <string name="altitude_uncalibrate_tip">Kalibroimaton tieto</string>
   <string name="altitude_unit">m</string>
   <string name="angle">%.0f</string>
   <string name="app_description_content">Kompassia käytetään navigointiin ja suuntaamiseen ja näyttää sinulle suunnan. Varmista, että voit elää ilman näitä ominaisuuksia, ennen kuin poistat sovelluksen.</string>
