--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -1063,6 +1063,7 @@ Tämän ominaisuuden voi poistaa käytöstä [Asetuksista]"</string>
   <string name="calls_title">Puhelut</string>
   <string name="camera_double_tap_power_gesture_desc">Avaa kamera nopeasti avaamatta näytön lukitusta</string>
   <string name="camera_double_tap_power_gesture_title">Kamera: paina virtapainiketta kahdesti</string>
+  <string name="camera_front">Etu %s</string>
   <string name="camera_gesture_desc">Avaa kamerasovellus kääntämällä rannettasi kahdesti</string>
   <string name="camera_gesture_title">Kaksoiskääntäminen kameraa varten</string>
   <string name="camera_key_action_app_title">Avaa sovellus</string>
@@ -1077,6 +1078,7 @@ Tämän ominaisuuden voi poistaa käytöstä [Asetuksista]"</string>
   <string name="camera_key_action_shortcut_wake">Lukitse/Herätä laite</string>
   <string name="camera_key_action_title">Mi Painike</string>
   <string name="camera_key_action_toggle_title">Käynnistä nappula</string>
+  <string name="camera_rear">Taka %s</string>
   <string name="cancel">Peruuta</string>
   <string name="cancel_action">Peruuta</string>
   <string name="cancel_alert">Hylätäänkö muutokset?</string>
@@ -1342,6 +1344,7 @@ Voit jatkaa puhelimesi käyttöä, kun palautat tehdasasetukset. Kun olet määr
   <string name="dangerous_option">Korkean riskin kehittäjäasetukset</string>
   <string name="dangerous_option_hint">%1$s on käytössä. Napauta vaihtaaksesi asetuksia.</string>
   <string name="dangerous_option_hint_title">Korkean riskin ominaisuus on käytössä</string>
+  <string name="dangerous_option_switch_title">Ilmoita korkean riskin ominaisuuksista</string>
   <string name="dashboard_title">Asetukset</string>
   <string name="data_limit">Datankäyttöraja</string>
   <string name="data_saver_off">Pois käytöstä</string>
@@ -1538,6 +1541,7 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="device_available_memory">Käytettävissä oleva tallennustila</string>
   <string name="device_battery">Akku</string>
   <string name="device_build_id">Versionumero</string>
+  <string name="device_camera">Kamera</string>
   <string name="device_cellular_network">Mobiiliverkkojen haku</string>
   <string name="device_complete_parameters">Kaikki tiedot</string>
   <string name="device_cpu">CPU</string>
@@ -1593,7 +1597,7 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="dialog_title_hdmi_color_calibration">Värinkorjauksen esiasetus</string>
   <string name="dialog_title_login">Kirjaudu Mi Tiliisi</string>
   <string name="dialog_yes">Kyllä</string>
-  <string name="direct_boot_unaware_dialog_message">Huom: Voit käyttää tätä näppäimistöä vain uudelleenkäynnistyksen jälkeen jos poistat laitteesi lukituksen.</string>
+  <string name="direct_boot_unaware_dialog_message">Huom: Uudelleenkäynnistyksen jälkeen tämä sovellus ei toimi, ennen kuin poistat puhelimesi lukituksen.</string>
   <string name="disableNetwork">disableNetwork</string>
   <string name="disable_overlays">Poista HW-peittok. käyt.</string>
   <string name="disable_overlays_summary">Käytä GPU:ta näytön koostamiseen</string>
@@ -2981,11 +2985,15 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="music_dirac_mode_general">Yleinen</string>
   <string name="music_dirac_mode_general_earbuds">Yleinen</string>
   <string name="music_dirac_mode_general_inear">Yleinen In-Ear</string>
+  <string name="music_dirac_mode_half_in_ear">Mi Half in Ear</string>
   <string name="music_dirac_mode_headset">Mi Headphones</string>
   <string name="music_dirac_mode_headset_comfort">Mi Comfort</string>
   <string name="music_dirac_mode_in_ear">Mi In-Ear</string>
+  <string name="music_dirac_mode_in_ear2">Mi In-Ear 2</string>
   <string name="music_dirac_mode_in_ear_2013">Mi In-Ear (2013)</string>
   <string name="music_dirac_mode_in_ear_pro">Mi In-Ear Pro</string>
+  <string name="music_dirac_mode_india_earphones">Mi Earphones</string>
+  <string name="music_dirac_mode_india_earphones_basic">Mi Earphones Basic</string>
   <string name="music_dirac_mode_off">Dirac pois päältä</string>
   <string name="music_dirac_mode_piston_1">Mi Piston-1</string>
   <string name="music_dirac_mode_piston_100">Mi Piston</string>
@@ -4600,7 +4608,7 @@ Laitteeseesi asennettu luotettu varmenne tekee tämän mahdolliseksi."</string>
   <string name="status_bar_settings_basic_settings">Asetukset</string>
   <string name="status_bar_settings_custom_carrier">Muokkaa operaattorin nimeä</string>
   <string name="status_bar_settings_custom_wifi_name">Muokkaa Wi-Fi nimeä</string>
-  <string name="status_bar_settings_customer_feedback">Palaute</string>
+  <string name="status_bar_settings_customer_feedback">palaute</string>
   <string name="status_bar_settings_enable_notification">Näytä ilmoitukset</string>
   <string name="status_bar_settings_expand_top_notification">Laajenna ylin ilmoitus</string>
   <string name="status_bar_settings_expandable_under_keyguard">Näytä Lukitusnäytöllä</string>
