--- a/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
@@ -121,6 +121,7 @@
   <string name="security_permission_denied_text">Pääsy kielletty</string>
   <string name="security_permission_failed_text">Sisäinen virhe, yritä myöhemmin uudelleen</string>
   <string name="security_permission_network_failed_text">Verkkoyhteyttä ei voitu muodostaa. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
+  <string name="security_permission_open_wifi_settings">Avaa Wi-Fi-asetukset</string>
   <string name="security_permission_validate_warning">Kiitos, että autat tekemään MIUI:sta paremman!</string>
   <string name="security_permission_wifi_and_data_opened_text">Wi-Fi ja mobiilidata otettu käyttöön</string>
   <string name="security_permission_xiaomi_account_missed_text">Syötä Mi Tilisi ID</string>
